<?xml version="1.0"?>
<package>
  <name>master</name>
  <version>0.0.0</version>
  <description>The master package</description>

  <maintainer email="ras@todo.todo">ras</maintainer>

  <license>BSD</license>

  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>robot_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>robot_msgs</run_depend>

</package>
